#+TITLE: Changelog for Alabaster Themes
#+AUTHOR: Vedang Manerikar
#+BASED_ON: Alabaster theme by Nikita Prokopov

* Unreleased

** New Features
- Added ~alabaster-themes-no-bold~ customization option to disable bold font variations
- Theme now respects original Alabaster philosophy when ~alabaster-themes-no-bold~ is set to t
- All 85+ bold face definitions now conditionally apply bold based on user preference

** Cleanup
- Removed ~alabaster-common.el~ deadcode file (colors are now defined in theme palettes)
- Removed obsolete test cases referencing removed color variables

* Version 1.0.0 (2025-11-11)

** Major Refactoring

This release represents a complete rewrite of the alabaster-emacs package to align with modern Emacs theme best practices, inspired by the ef-themes framework.

** New Features

*** Theme Framework
- Implemented ~alabaster-themes-theme~ macro for consistent theme structure
- Added semantic palette system with color mappings and overrides
- Centralized all face definitions in ~alabaster-themes.el~
- Themes are now data (palette + optional overrides)

*** User Commands
- ~alabaster-themes-select~ - Interactive theme selection with annotations
- ~alabaster-themes-select-light~ - Select from light themes only
- ~alabaster-themes-select-dark~ - Select from dark themes only
- ~alabaster-themes-toggle~ - Toggle between two themes
- ~alabaster-themes-load-random~ - Load random theme
- ~alabaster-themes-rotate~ - Rotate through custom list
- ~alabaster-themes-list-colors~ - Preview palette in tabulated list
- ~alabaster-themes-list-colors-current~ - Preview current theme palette

*** Customization Options
- ~alabaster-themes-headings~ - Per-level heading styles with variable-pitch, weights, heights
- ~alabaster-themes-mixed-fonts~ - Monospace-sensitive constructs
- ~alabaster-themes-variable-pitch-ui~ - Proportional fonts in UI
- ~alabaster-themes-common-palette-overrides~ - Global palette overrides